k8s-workload-challenge/db1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db1
  namespace: project-plato
  labels:
    app: db1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: db1
  template:
    metadata:
      labels:
        app: db1
    spec:
      containers:
      - image: nginx:1.16.1-alpine
        imagePullPolicy: IfNotPresent
        name: db1
      restartPolicy: Always
---
