k8s-workload-challenge/db2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db2
  namespace: project-plato
  labels:
    app: db2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: db2
  template:
    metadata:
      labels:
        app: db2
    spec:
      containers:
      - image: nginx:1.16.1-alpine
        imagePullPolicy: IfNotPresent
        name: db2
        ports:
        - name: container-port
          containerPort: 80
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: db2
  namespace: project-plato
spec:
  type: ClusterIP
  selector:
    app: db2
  ports:
  - port: 5432
    targetPort: container-port
